# 286-temporal-gnn-trading

./: Cargo.toml  README.md  README.ru.md  README.specify.md  readme.simple.md  readme.simple.ru.md
examples/: backtest.rs  basic_tgn.rs  live_trading.rs
src/: lib.rs
src/embedding/: mod.rs
src/memory/: mod.rs
src/message/: mod.rs
src/strategy/: mod.rs
src/temporal/: mod.rs
src/utils/: mod.rs
tests/: integration.rs
